--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -21,9 +21,6 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/fibers/algo/round_robin.cpp
     ${BUNDLE_HOME}/sonia/sal/sal.cpp
     ${BUNDLE_HOME}/sonia/net/uri.cpp
-    ${BUNDLE_HOME}/sonia/net/http/http.cpp
-    ${BUNDLE_HOME}/sonia/net/http/http_message.cpp
-    ${BUNDLE_HOME}/sonia/net/http/sonnet.cpp
     ${BUNDLE_HOME}/sonia/utility/assert_handler.cpp
     ${BUNDLE_HOME}/sonia/utility/file_persister.cpp
     ${BUNDLE_HOME}/sonia/utility/json/json_value.cpp
@@ -40,10 +37,20 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/services/scheduler/basic_scheduler.cpp
     ${BUNDLE_HOME}/sonia/services/scheduler/fiber_work_stealing_scheduler.cpp
     ${BUNDLE_HOME}/sonia/services/io/file.cpp
-    ${BUNDLE_HOME}/sonia/services/io/io_factory.cpp
-    ${BUNDLE_HOME}/sonia/services/io/io_ssl_factory.cpp
-    ${BUNDLE_HOME}/sonia/services/io/socket_address.cpp
 )
+
+if (NOT DEFINED NO_NET)
+    set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
+        ${BUNDLE_HOME}/sonia/net/http/http.cpp
+        ${BUNDLE_HOME}/sonia/net/http/http_message.cpp
+        ${BUNDLE_HOME}/sonia/net/http/sonnet.cpp
+        ${BUNDLE_HOME}/sonia/services/io/io_factory.cpp
+        ${BUNDLE_HOME}/sonia/services/io/io_ssl_factory.cpp
+        ${BUNDLE_HOME}/sonia/services/io/socket_address.cpp
+    )
+else()
+    add_definitions(-DSONIA_NO_NET)
+endif ()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
     set (BUNDLE_SOURCES ${BUNDLE_SOURCES}
