--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /projects/vs/sonia-prime-lib/*.user
 /projects/vs/sonia-prime/*.user
 /projects/vs/sonia-prime/x64
+/projects/vs/**/*.user
+/**/.DS_Store
+/tests/all_tests_registrar.cpp
