--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -532,6 +532,7 @@
     <ClInclude Include="..\..\..\sonia\utility\json\json_cast.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\json\value.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\linked_buffers.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\marshaling\span.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\marshaling\marshaling.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\marshaling\service.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\marshaling\string.hpp" />
@@ -605,6 +606,7 @@
     <ClInclude Include="..\..\..\sonia\utility\serialization\serialization.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\serialization_fwd.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\service.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\serialization\span.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\std\path.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\string.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\serialization\tuple.hpp" />
