--- a/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
@@ -327,5 +327,8 @@
     <ClInclude Include="..\..\..\applied\embedded.hpp">
       <Filter>sonia.applied</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\io\io_ssl_service.hpp">
+      <Filter>sonia.services\io</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
