--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -369,6 +369,7 @@
     <ClInclude Include="..\..\..\sonia\sys\macos\dispatch.hpp" />
     <ClInclude Include="..\..\..\sonia\sys\macos\timer.hpp" />
     <ClInclude Include="..\..\..\sonia\sys\posix\posix.hpp" />
+    <ClInclude Include="..\..\..\sonia\sys\windows\path.hpp" />
     <ClInclude Include="..\..\..\sonia\sys\windows\thread_pool.hpp" />
     <ClInclude Include="..\..\..\sonia\sys\windows\thread_pool_api.hpp" />
     <ClInclude Include="..\..\..\sonia\sys\windows\windows.hpp" />
@@ -825,6 +826,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\..\sonia\sys\windows\path.cpp" />
     <ClCompile Include="..\..\..\sonia\sys\windows\thread_pool.cpp" />
     <ClCompile Include="..\..\..\sonia\sys\windows\thread_pool_api.cpp" />
     <ClCompile Include="..\..\..\sonia\sys\windows\windows.cpp" />
