--- a/projects/cmake/sonia-tests-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-tests-lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 include (${COMMON_INCLUDE})
 
+include_directories(${PROJECT_HOME})
 include_directories(${BUNDLES})
 include_directories(${BUNDLES}/sonia-prime)
 include_directories(${TPLS}/lexertl14/include)
