--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -2124,6 +2124,9 @@
     <ClInclude Include="..\..\..\sonia\span.hpp">
       <Filter>sonia</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\iterators\lzma_decompress_iterator.hpp">
+      <Filter>sonia.utility\iterators</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
