--- a/projects/cmake/sonia-prime/CMakeLists.txt
+++ b/projects/cmake/sonia-prime/CMakeLists.txt
@@ -99,7 +99,7 @@ if ("${LIBRARY_TYPE}" STREQUAL "STATIC")
 endif ()
 
 add_library(${BUNDLE_NAME} ${LIBRARY_TYPE} ${BUNDLE_SOURCES})
-target_link_libraries(${BUNDLE_NAME} sonia-prime-lib ${ZLIB} ${BZLIB} ${BOOST_LOG_SETUP} ${BOOST_LOG} ${BOOST_SERIALIZATION} ${BOOST_FILESYSTEM} ${BOOST_THREAD} ${BOOST_PROGRAM_OPTIONS} ${BOOST_CONTEXT} ${BOOST_REGEX} ${BOOST_STACKTRACE} ${BOOST_RANDOM} ${PLATFORM_LIBS})
+target_link_libraries(${BUNDLE_NAME} sonia-prime-lib ${ZLIB} ${BZLIB} ${LIBLZMA} ${BOOST_LOG_SETUP} ${BOOST_LOG} ${BOOST_SERIALIZATION} ${BOOST_FILESYSTEM} ${BOOST_THREAD} ${BOOST_PROGRAM_OPTIONS} ${BOOST_CONTEXT} ${BOOST_REGEX} ${BOOST_STACKTRACE} ${BOOST_RANDOM} ${PLATFORM_LIBS})
 if (NOT DEFINED NO_SSL)
     target_link_libraries(${BUNDLE_NAME} ${OPENSSL})
 endif ()
