--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -590,6 +590,7 @@
     <ClInclude Include="..\..\..\sonia\utility\parsers\xml\lexertl_lexer.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\parsers\xml\model.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\parsers\xml\parser.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\path.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\placement_new.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\persister.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\polymorphic_traits.hpp" />
